<resources>
    <string name="app_name">Study Hopper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="register_button">Register</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="title_activity_study_group_finder">StudyGroupFinder</string>
    <string name="title_activity_reservation_page">StudyRoomReservations</string>
    <string name="title_activity_profile_viewer">ProfileViewer</string>
    <string name="study_groups_card_title">Your Study Groups</string>
    <string name="study_group_finder_card_title">Study Group Finder</string>
    <string name="study_room_reservation_card_title">Study Room Reservations</string>
    <string name="title_activity_study_group_details">StudyGroupDetails</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_session_details">SessionDetails</string>
    <string name="title_activity_study_locations_map">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="study_group_finder">Study Group Finder</string>
    <string name="study_group_members">Study Group Members</string>
    <string name="study_group_statistics">Study Group Statistics</string>
    <string name="study_session_card_title">Current Study Sessions</string>
    <string name="study_session_content_description">Image for study sessions</string>
    <string name="study_group_circle_color_description">Icon for group</string>
    <string name="study_group_settings">Group Settings</string>
    <string name="study_group_leave_group">Leave this group</string>
    <string name="study_group_add_session">Add Session</string>
    <string name="session_name">Session Name</string>
    <string name="session_description">Session Description</string>
    <string name="session_location">Session Location</string>
    <string name="session_date">Session Date</string>
    <string name="session_start_time">Start Time</string>
    <string name="session_end_time">End Time</string>
    <string name="create_study_group">Create Study Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_course_code">Course the Group is Connected With</string>
    <string name="group_color">Customize the Color for the Group:</string>
    <string name="messages">Messages</string>
    <string name="my_groups">My Groups</string>
    <string name="study_locations">Study Locations</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nav_profile_email">example@example.com</string>
    <string name="nav_profile_name">Demo User</string>
    <string name="profile_pic_desc">Icon for user\'s profile picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="major">Major</string>
    <string name="college">College</string>
    <string name="university">University</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth (mm/dd/yyyy)</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="logoDescription">Study Hopper Logo</string>
    <string name="max_group_members_prompt">Maximum Group Size:</string>
    <string name="select_here">Select Here</string>
    <string name="group_color_image_description">Group Color Selection</string>
    <string-array name="group_preferences">
        <item>Coed Group</item>
        <item>Females Only Group</item>
        <item>Males Only Group</item>
    </string-array>
    <string name="profile_tab">Profile</string>
    <string name="classes_tab">Classes</string>
    <string name="search_group_tab">Search Group</string>
    <string name="search_people_tab">Search People</string>
    <string-array name="age_range_preference">
        <item>All Ages</item>
        <item>18 – 21</item>
        <item>22 – 25</item>
        <item>26 – 30</item>
        <item>31 – 40</item>
        <item>40+</item>
    </string-array>
    <string-array name="location_preference">
        <item>On Campus</item>
        <item>Off Campus</item>
    </string-array>
    <string-array name="group_size_preference">
        <item />
        <item>2–5</item>
        <item>6–10</item>
        <item>11+</item>
    </string-array>
    <string-array name="gender_preferences">
        <item />
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_number">Course Number</string>
    <string name="course_section">Course Section</string>
    <string name="course_subject">Course Subject</string>
    <string name="add_new_class">Add New Class</string>
    <string name="course_name">Course Name</string>
    <string name="semester">Semester</string>
    <string name="year">Year</string>
    <string name="add_button_text">Add</string>
    <string name="current_course_list">Current Course List</string>
    <string name="ex_course_name">Software Development for Mobile Devices</string>
    <string name="ex_course_code">COP</string>
    <string name="ex_course_number">4656</string>
    <string name="ex_course_section">01</string>
    <string name="remove_button_desc">Button to remove class</string>
    <string name="forgot_password_button_text">Forgot Password</string>
    <string name="add_group_member">Add Group Member</string>
    <string name="group_member_edit_text_hint">Type in an email address</string>
    <string name="remove_members">Remove Members</string>
    <string name="delete">Delete</string>
    <string name="search_by_name">Search by Name</string>
    <string name="male_only">Male Only</string>
    <string name="female_only">Female Only</string>
    <string name="coed">Coed</string>
    <string name="results">Results</string>
    <string name="gender_preference">Gender Preference</string>
    <string name="no_results_found">No Results Found</string>
    <string name="search_by_categories">Search By Categories</string>
    <string name="location_preference">Location Preference</string>
    <string name="on_campus">On-Campus Only</string>
    <string name="age_range">Age Range</string>
    <string name="subject">Subject</string>
    <string name="search_by_course">Search By Course</string>
    <string name="search_groups">Search Groups</string>
    <string name="group_size">Group Size</string>
    <string name="session_type_prompt">What type of study session is this?</string>
    <string name="session_type_collaborative">Collaborative Session</string>
    <string name="session_type_quiet">Quiet Session</string>
    <string name="session_type_review">Review Session</string>
    <string name="em_dash">–</string>
    <string name="select_study_location_text">Select Study Location for Group</string>
    <string name="select_age_range_text">Select Age Range for Group</string>
    <string name="select_gender_pref_text">Select Gender Preferences for Group</string>
    <string name="search_by_major">Search by Major</string>
    <string name="hint_major">i.e. Physics</string>
    <string name="search_by_college">Search by College</string>
    <string name="i_e_arts_science"><![CDATA[i.e. Arts & Science]]></string>
    <string name="search_people">Search People</string>
    <string name="session_name_text">Session Name:</string>
    <string name="session_date_text">Session Date:</string>
    <string name="session_time_text">Session Time:</string>
    <string name="session_type_text">Session Type:</string>
    <string name="session_location_text">Study Session Location</string>
    <string name="change_date_and_time">Adjust Study Session Date &amp; Time</string>
    <string name="update_date_and_time">Update Date &amp; Time</string>
    <string name="delete_session">Delete Session</string>
    <string name="check_noise_level">Check Noise Level</string>
    <string name="study_room_noise_level">Current Sound Level in Study Room</string>
    <string name="default_noise">-- dB</string>
    <string name="default_name">Unknown Unkown</string>
    <string name="age_label">Age:</string>
    <string name="default_age">18</string>
    <string name="gender_label">Gender:</string>
    <string name="default_gender">Other</string>
    <string name="education_header">Education</string>
    <string name="college_label">College:</string>
    <string name="major_label">Major:</string>
    <string name="default_major">Undecided</string>
    <string name="classes_header">Classes</string>
    <string name="message_user">Message User</string>
    <string name="invite_to_group">Invite to group</string>
    <string name="default_group_name">Default Group Name</string>
    <string name="cop_1234">COP 1234</string>
    <string name="group_gender">Group Gender:</string>
    <string name="main_study_location_label">Main Study Location:</string>
    <string name="group_max_size_label">Group Max Size:</string>
    <string name="default_group_size">5</string>
    <string name="age_range_label">Age Range:</string>
    <string name="course_label">Course:</string>
    <string name="default_age_range">Any Age</string>
    <string name="request_to_join_button_text">Request to Join</string>
    <string name="group_members">Group Members</string>
</resources>
