<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionPage"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_session_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_session_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edit_text_session_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_location"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_text_session_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectSessionDate"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/session_date"
        android:inputType="date"/>


    <EditText
        android:id="@+id/edit_text_session_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_start_time"
        android:onClick="selectSessionTime"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none" />

    <EditText
        android:id="@+id/edit_text_session_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_end_time"
        android:onClick="selectSessionTime"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/study_group_add_session"
        android:textSize="20sp"/>

</LinearLayout>