<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sessions.CreateSession"
    android:padding="16dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_session_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_name"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="150">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_session_description"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/session_description"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"/>


    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_session_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_location"
        android:inputType="textPostalAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/edit_text_session_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="selectSessionDate"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/session_date"
        android:inputType="date"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/edit_text_session_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:hint="@string/session_start_time"
            android:textAlignment="textEnd"
            android:onClick="selectSessionTime"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/em_dash"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_text_session_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"

            android:hint="@string/session_end_time"
            android:onClick="selectSessionTime"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none" />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_type_prompt"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        />


    <RadioGroup
        android:id="@+id/sessionPreferenceRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_collaborative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_type_collaborative"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_button_quiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/session_type_quiet"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_button_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/session_type_review"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked" />

    </RadioGroup>

    <Button
        android:id="@+id/add_session_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/study_group_add_session"
        android:background="@color/safariGreen"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:onClick="addSession" />

</LinearLayout>
