<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyGroupActivity">


    <RelativeLayout
        android:id="@+id/group_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <TextView
        android:id="@+id/groupName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:text="Hadoop Study Group"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/study_group_circle_color_description"
            android:src="@drawable/ic_study_group_color" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/group_name_layout"
        android:padding="8dp"
        android:layout_margin="6dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardBackgroundColor="@color/safariRed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/studySession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/study_session_card_title"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/studySessionImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/study_session_content_description"
                android:src="@drawable/ic_study_sessions" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>




</RelativeLayout>